--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -6,7 +6,7 @@
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  background-color: rgb(156, 166, 156);
+  background-color: rgb(94, 140, 94);
   padding: 20px;
   transition: opacity 0.5s ease;
   z-index: 9999; /* Add this line */
@@ -33,20 +33,17 @@ body:hover .info-banner {
   }
   
 
-  .banner {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #f0f0f0;
-    padding: 20px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-  }
-
   /* Style for the WhatsApp icon */
   .whatsapp-icon {
     width: 30px;
     height: 30px;
   }
+
+  @keyframes blink {
+		0% {opacity: 1;}
+		50% {opacity: 0;}
+		100% {opacity: 1;}
+	}
+.blink {
+  animation: blink 3s linear infinite;
+}
